// packages/backend/prisma/schema.prisma（方案B 目标态）
// 对齐 ARCH §3.1 完整 Schema 定义

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ==================== 用户表 ====================
model User {
  id           String          @id @default(uuid())
  email        String          @unique
  passwordHash String          @map("password_hash")
  name         String?
  avatar       String?         @db.VarChar(512)
  phone        String?         @db.VarChar(20)
  bio          String?         @db.VarChar(200)
  deletedAt    DateTime?       @map("deleted_at")
  createdAt    DateTime        @default(now()) @map("created_at")
  updatedAt    DateTime        @updatedAt @map("updated_at")
  portfolios   Portfolio[]
  preferences  UserPreference?

  @@map("users")
}

// ==================== 投资组合表 ====================
model Portfolio {
  id             String           @id @default(uuid())
  userId         String           @map("user_id")
  name           String
  description    String?
  baseDate       DateTime?        @map("base_date") @db.Date
  currency       String           @default("CNY")
  archivedAt     DateTime?        @map("archived_at")
  createdAt      DateTime         @default(now()) @map("created_at")
  updatedAt      DateTime         @updatedAt @map("updated_at")
  user           User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  cashflows      CashFlow[]
  securities     Security[]
  securityTrades SecurityTrade[]
  securityPrices SecurityPrice[]
  cashBalances   CashBalance[]
  snapshots      AssetSnapshot[]
  dailyNavs      DailyNav[]
  dailyXirrs     DailyXirr[]
  dividends      DividendRecord[]
  fees           FeeRecord[]

  @@index([userId])
  @@map("portfolios")
}

// ==================== 出入金流水表（XIRR 现金流唯一来源）====================
model CashFlow {
  id          String       @id @default(uuid())
  portfolioId String       @map("portfolio_id")
  date        DateTime     @db.Date
  type        CashFlowType
  amount      Decimal      @db.Decimal(18, 2)
  note        String?
  createdAt   DateTime     @default(now()) @map("created_at")
  updatedAt   DateTime     @updatedAt @map("updated_at")
  portfolio   Portfolio    @relation(fields: [portfolioId], references: [id], onDelete: Cascade)

  @@index([portfolioId, date])
  @@map("cashflows")
}

enum CashFlowType {
  BUY
  SELL
}

// ==================== 标的主数据表 ====================
model Security {
  id          String           @id @default(uuid())
  portfolioId String           @map("portfolio_id")
  code        String
  name        String
  type        SecurityType     @default(STOCK)
  currency    String           @default("CNY")
  createdAt   DateTime         @default(now()) @map("created_at")
  updatedAt   DateTime         @updatedAt @map("updated_at")
  portfolio   Portfolio        @relation(fields: [portfolioId], references: [id], onDelete: Cascade)
  trades      SecurityTrade[]
  prices      SecurityPrice[]
  dividends   DividendRecord[]
  fees        FeeRecord[]

  @@unique([portfolioId, code])
  @@map("securities")
}

enum SecurityType {
  STOCK
  FUND
  BOND
  OTHER
  CASH
}

// ==================== 证券买卖流水表（方案B · 持仓推导唯一来源）====================
model SecurityTrade {
  id          String       @id @default(uuid())
  portfolioId String       @map("portfolio_id")
  securityId  String       @map("security_id")
  date        DateTime     @db.Date
  side        SecuritySide
  quantity    Decimal      @db.Decimal(18, 6)
  price       Decimal      @db.Decimal(18, 6)
  fee         Decimal      @db.Decimal(18, 2)
  note        String?
  createdAt   DateTime     @default(now()) @map("created_at")
  updatedAt   DateTime     @updatedAt @map("updated_at")
  portfolio   Portfolio    @relation(fields: [portfolioId], references: [id], onDelete: Cascade)
  security    Security     @relation(fields: [securityId], references: [id], onDelete: Cascade)

  @@index([portfolioId, date])
  @@index([securityId, date])
  @@map("security_trades")
}

enum SecuritySide {
  BUY_SEC
  SELL_SEC
}

// ==================== 标的最新价表（向前沿用）====================
model SecurityPrice {
  id          String    @id @default(uuid())
  portfolioId String    @map("portfolio_id")
  securityId  String    @map("security_id")
  price       Decimal   @db.Decimal(18, 6)
  asOf        DateTime  @db.Date
  createdAt   DateTime  @default(now()) @map("created_at")
  portfolio   Portfolio @relation(fields: [portfolioId], references: [id], onDelete: Cascade)
  security    Security  @relation(fields: [securityId], references: [id], onDelete: Cascade)

  @@index([portfolioId, securityId, asOf])
  @@map("security_prices")
}

// ==================== 现金余额表（独立 · 零联动）====================
model CashBalance {
  id          String    @id @default(uuid())
  portfolioId String    @map("portfolio_id")
  amount      Decimal   @db.Decimal(18, 2)
  asOf        DateTime  @db.Date
  note        String?
  createdAt   DateTime  @default(now()) @map("created_at")
  portfolio   Portfolio @relation(fields: [portfolioId], references: [id], onDelete: Cascade)

  @@index([portfolioId, asOf])
  @@map("cash_balances")
}

// ==================== 总资产每日唯一记录表（派生层 + 手工）====================
model AssetSnapshot {
  id            String            @id @default(uuid())
  portfolioId   String            @map("portfolio_id")
  date          DateTime          @db.Date
  totalAsset    Decimal           @db.Decimal(18, 2)
  marketValue   Decimal?          @db.Decimal(18, 2)
  cashBalance   Decimal?          @db.Decimal(18, 2)
  source        SnapshotSource
  valuationFlag SnapshotValuation
  note          String?
  recordedAt    DateTime          @default(now()) @map("recorded_at")
  createdAt     DateTime          @default(now()) @map("created_at")
  updatedAt     DateTime          @updatedAt @map("updated_at")
  portfolio     Portfolio         @relation(fields: [portfolioId], references: [id], onDelete: Cascade)

  @@unique([portfolioId, date])
  @@index([portfolioId, date])
  @@map("asset_snapshots")
}

enum SnapshotSource {
  DERIVED
  MANUAL
}

enum SnapshotValuation {
  EXACT
  CARRIED_FORWARD
  COST_BASED
  MANUAL_INPUT
}

// ==================== 每日净值表 ====================
model DailyNav {
  id                String    @id @default(uuid())
  portfolioId       String    @map("portfolio_id")
  date              DateTime  @db.Date
  unitNav           Decimal   @map("unit_nav") @db.Decimal(12, 6)
  cumulativeNav     Decimal   @map("cumulative_nav") @db.Decimal(12, 6)
  yearNav           Decimal   @map("year_nav") @db.Decimal(12, 6)
  shares            Decimal   @db.Decimal(18, 6)
  baseCumulativeNav Decimal?  @map("base_cumulative_nav") @db.Decimal(12, 6)
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")
  portfolio         Portfolio @relation(fields: [portfolioId], references: [id], onDelete: Cascade)

  @@unique([portfolioId, date])
  @@index([portfolioId, date])
  @@map("daily_nav")
}

// ==================== 每日 XIRR 表 ====================
model DailyXirr {
  id          String    @id @default(uuid())
  portfolioId String    @map("portfolio_id")
  date        DateTime  @db.Date
  xirrValue   Decimal?  @map("xirr_value") @db.Decimal(20, 8)
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")
  portfolio   Portfolio @relation(fields: [portfolioId], references: [id], onDelete: Cascade)

  @@unique([portfolioId, date])
  @@index([portfolioId, date])
  @@map("daily_xirr")
}

// ==================== 分红 / 费用 / 偏好（不参与收益计算，C-08/C-09）====================
model DividendRecord {
  id          String       @id @default(uuid())
  portfolioId String       @map("portfolio_id")
  securityId  String       @map("security_id")
  date        DateTime     @db.Date
  amount      Decimal      @db.Decimal(18, 2)
  type        DividendType @default(CASH)
  note        String?
  createdAt   DateTime     @default(now()) @map("created_at")
  portfolio   Portfolio    @relation(fields: [portfolioId], references: [id], onDelete: Cascade)
  security    Security     @relation(fields: [securityId], references: [id], onDelete: Cascade)

  @@index([portfolioId, date])
  @@index([securityId, date])
  @@map("dividend_records")
}

model FeeRecord {
  id            String    @id @default(uuid())
  portfolioId   String    @map("portfolio_id")
  securityId    String    @map("security_id")
  date          DateTime  @db.Date
  amount        Decimal   @db.Decimal(18, 2)
  type          FeeType   @default(OTHER)
  transactionId String?   @map("transaction_id")
  note          String?
  createdAt     DateTime  @default(now()) @map("created_at")
  portfolio     Portfolio @relation(fields: [portfolioId], references: [id], onDelete: Cascade)
  security      Security  @relation(fields: [securityId], references: [id], onDelete: Cascade)

  @@index([portfolioId, date])
  @@index([securityId, date])
  @@map("fee_records")
}

model UserPreference {
  id                 String   @id @default(uuid())
  userId             String   @unique @map("user_id")
  defaultPortfolioId String?  @map("default_portfolio_id")
  defaultGranularity String   @default("month") @map("default_granularity")
  defaultDateRange   String   @default("1y") @map("default_date_range")
  aggregation        String   @default("last")
  weekStartsOn       Int      @default(1) @map("week_starts_on")
  navDecimals        Int      @default(4) @map("nav_decimals")
  xirrDecimals       Int      @default(2) @map("xirr_decimals")
  theme              String   @default("system")
  staleDays          Int      @default(3) @map("stale_days")
  showLiquidated     Boolean  @default(false) @map("show_liquidated")
  costBasisView      String   @default("avg") @map("cost_basis_view")
  // 现金余额软提示 / 金额格式（SET-P0-07 / SET-P1-03）
  // 默认值以 PRD §6.9.1 L908-909 与 §7.8 L1377 为唯一权威：true / true / true / false
  cashHintOnCashflow Boolean  @default(true) @map("cash_hint_on_cashflow")
  cashHintOnTrade    Boolean  @default(true) @map("cash_hint_on_trade")
  amountThousands    Boolean  @default(true) @map("amount_thousands")
  amountAbbrev       Boolean  @default(false) @map("amount_abbrev")
  dashboardLayout    Json?    @map("dashboard_layout")
  createdAt          DateTime @default(now()) @map("created_at")
  updatedAt          DateTime @updatedAt @map("updated_at")
  user               User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_preferences")
}

enum DividendType {
  CASH
  STOCK_DIVIDEND
}

enum FeeType {
  COMMISSION
  STAMP_TAX
  OTHER
}
