classDiagram
    %% ===== 账户域 · 缺口补齐后目标态（incremental-account-v2）=====
    class PortfolioSummaryDto {
        <<GET /portfolios/summary · 目标态>>
        +id: string
        +name: string
        +totalAsset: string
        +holdingsCount: number
        +lastUpdatedAt: string|null
        +baseDate: string|null
        +currency: string
        +createdAt: string
        +cumulativeNav: string|null
        +yearReturnRate: string|null
        +netInvested: string
        +floatingProfit: string|null
    }
    class AccountStatsResponse {
        <<GET /account/stats · 目标态>>
        +portfolioCount: number
        +cashflowCount: number
        +tradeCount: number
        +snapshotDays: number
        +recordDays: number
        +firstDate: string|null
        +lastDate: string|null
    }
    class UserPublic {
        <<shared · 7 字段>>
        +id: string
        +email: string
        +name: string|null
        +avatar: string|null
        +phone: string|null
        +bio: string|null
        +createdAt: string
    }
    class UserPreference {
        +defaultPortfolioId: string|null
        +theme / granularity / dateRange / staleDays ...
        +cashHintOnCashflow: boolean = true
        +cashHintOnTrade: boolean = true
        +amountThousands: boolean = true
        +amountAbbrev: boolean = false
    }
    class Portfolio {
        +baseDate: Date|null
        +currency: string
        +createdAt: Date
    }
    class DailyNav {
        +cumulativeNav: Decimal
        +yearNav: Decimal
    }
    class CashFlow {
        +type: BUY|SELL
        +amount: Decimal
    }
    class AssetSnapshot {
        +totalAsset: Decimal
    }
    class SecurityTrade {
        +side: BUY_SEC|SELL_SEC
    }

    Portfolio --> PortfolioSummaryDto : baseDate / currency / createdAt
    DailyNav --> PortfolioSummaryDto : cumulativeNav / yearNav-1
    CashFlow --> PortfolioSummaryDto : netInvested = ΣBUY-ΣSELL
    AssetSnapshot --> PortfolioSummaryDto : totalAsset / floatingProfit
    CashFlow --> AccountStatsResponse : cashflowCount
    SecurityTrade --> AccountStatsResponse : tradeCount
    UserPublic ..> UserPreference : same user

    note for PortfolioSummaryDto "null = 无数据；前端渲染 — / 未成立，禁止渲染 0"
    note for PortfolioSummaryDto "金额 2 位 / 净值 6 位 / 收益率 8 位；收益率为比率非百分数"
    note for UserPublic "createdAt 由 toUserPublic 投影，User 对外唯一出口"
    note for UserPreference "默认值以 PRD 6.9.1 为准：true/true/true/false"
